fix: additional scrollbar deleted

--- a/assets/main.css
+++ b/assets/main.css
@@ -16,6 +16,6 @@ body {
   overflow-x: hidden;
 }
 main {
-  overflow-x: hidden;
+
   min-height: 100vh;
 }
